optimized images, fixed bug with too wide startpage

--- a/src/render/styles/base/_base.scss
+++ b/src/render/styles/base/_base.scss
@@ -6,6 +6,7 @@ html {
 body {
     @include fyr_text-body;
     color: $fyr_color-text;
+    overflow-x: hidden;
 }
 
 * {
